# New-project

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  游戏方案.md
docs/superpowers/plans/: 2026-04-29-graphiti-text-adventure-demo.md
examples/: stonebridge_world.json
graphiti_text_adventure/: __init__.py  cli.py  engine.py  graphiti_adapter.py  ingestion.py  models.py  narrator.py  prompts.py  real_environment.py  retrieval.py  runtime_clients.py  world.py
scripts/: check.sh  game_server.py  real_graphiti_smoke.py  serve_playable.py
tests/: test_engine.py  test_graphiti_adapter.py  test_ingestion.py  test_narrator.py  test_playable_page.py  test_prompts.py  test_real_environment.py  test_retrieval.py  test_runtime_clients.py  test_world.py
web/: play.html
